# website

./: .env  .gitignore  .stignore  Taskfile.yml  deploy_blog.sh  docker-compose.yaml  package-lock.json  readme.md
.cursor/rules/: project.mdc  tailwind.mdc
.github/workflows/: ci.yml
api/: .gitignore  Dockerfile  manage.py  pyproject.toml  readme.md  schema.json
api/accounts/: api.py  contenttypes.py  groups.py  models.py  schemas.py  urls.py
api/accounts/fixtures/: initial_users.json
api/accounts/migrations/: 0001_initial.py  0002_user_avatar_link.py  0003_user_notes.py  0004_alter_user_email.py  0005_user_website_url.py
api/accounts/tests/: conftest.py  test_accounts_api.py  test_contenttypes_api.py  test_groups_api.py  test_permissions_api.py
api/auth/: middleware.py
api/blog/: admin.py  api.py  feed_builder.py  models.py  schema.py  schemas.py
api/blog/api/: comments.py  feed.py  files.py  posts.py  series.py
api/blog/fixtures/: markdown_post.json
api/blog/migrations/: 0001_initial.py  0002_file.py  0003_comment.py  0004_alter_comment_parent.py  0005_comment_reviewed.py  0006_alter_comment_parent.py  0007_series_alter_comment_post_alter_file_posts_and_more.py  0008_alter_comment_options_alter_series_options_and_more.py  0009_sharecode.py
api/blog/models/: __init__.py  comment.py  file.py  post.py  series.py  sharecode.py
api/blog/schema/: comment.py  feed.py  file.py  post.py  series.py  sharecode.py  user.py  validation.py
api/blog/tests/: conftest.py  test_comments_api.py  test_feed_api.py  test_files_api.py  test_posts_api.py  test_series_api.py  test_sharecodes.py
api/config/: api.py  settings.py
api/core/: .env  .env.test  api.py  asgi.py  config.py  settings.py  urls.py
api/core/tests/: test_core_api.py
api/files/: storage.py
api/resume/: admin.py  api.py  models.py  schemas.py
api/resume/fixtures/: initial_resume.json
api/resume/migrations/: 0001_initial.py
api/resume/tests/: conftest.py  test_resume_api.py  test_resume_models.py
docs/: README.md  authentication-authorization.md  backend.md  ci-cd.md  contributing.md  development-workflow.md  frontend.md  getting-started.md  glossary.md  project-overview.md  reference.md  security.md  troubleshooting.md
frontend/: Dockerfile  package-lock.json  package.json  vite.config.ts
frontend/src/: app.css
ui/: .env  Dockerfile  app.vue  components.d.ts  error.vue  eslint.config.js  index.html  nuxt.config.ts  package-lock.json  package.json  playwright.config.ts  postcss.config.cjs  readme.md  svelte.config.js  tailwind.config.js  tailwind.config.ts  vite.config.ts  vitest.config.ts
ui/assets/: base.css
ui/components/: CalendarHeatmap.vue  CommentThread.vue  Comments.vue  LoginDialog.vue  MainFooter.vue  MainNav.vue  MarkdownEditor.vue  MarkdownPreview.vue  ProficiencyEditor.vue  SignupDialog.vue  TheWelcome.vue
ui/composables/: useApiClient.ts  useFileUpload.ts
ui/e2e/: global-setup.ts  global-teardown.ts  jsonld.spec.ts  mockServer.ts  opengraph.spec.ts  vue.spec.ts
ui/layouts/: admin.vue  default.vue
ui/lib/api/: runtime.ts
ui/middleware/: auth-init.global.ts  auth.ts
ui/pages/: 404.vue  about.vue  index.vue  profile.vue  resume.vue
ui/playwright-report/: index.html
ui/plugins/: auth-init.client.ts  auth-init.server.ts  primevue.ts
ui/services/: MarkdownParser.ts
ui/src/: App.vue  app.css  app.html  main.ts  shims-vue.d.ts
ui/stores/: auth.ts
ui/views/: BlogListView.vue  BlogPostView.vue  CommentFormView.vue  HomeView.vue  PageNotFoundView.vue  ResumeView.vue
(+270 files in other folders)
