[tool.poetry]
name = "blog-api"
package-mode = false
version = "1.0.0"
description = "My blog API"
authors = ["Matt Ouille <matt.ouille@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
django-ninja = "^1.3.0"
uvicorn = "^0.30.6"
psycopg = {extras = ["binary", "pool"], version = "^3.2.1"}
django-ninja-extra = "^0.21.3"
django-ninja-jwt = "^5.3.2"
django-cors-headers = "^4.4.0"
django-structlog = "^8.1.0"
pydantic-settings = "^2.4.0"
django-storages = {extras = ["s3"], version = "^1.14.4"}
django-cleanup = "^9.0.0"
pytest-django = "^4.11.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.7"

[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

line-length = 100
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint.isort]
known-first-party = ["api"]

[tool.pytest.ini_options]
addopts = "--verbose"
DJANGO_SETTINGS_MODULE = "core.settings"
testpaths = [
    "tests",
]

[tool.coverage.run]
source = ["."]
omit = [
    "*__init__*",
    ".venv/*",
]

[tool.coverage.report]
omit = [
    "*__init__*",
    ".venv/*",
    "tests/*",
    "app/core/db*", # This should be an external package
    "notebooks/*",
]
exclude_lines = [
    "if __name__ == .__main__.:"
]